apps/trust1/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trust1
  labels:
    "backstage.io/kubernetes-id": trust1
    "istio.io/dataplane-mode" : ambient
    "istio.io/use-waypoint": waypoint
    "connecthing.io/microservice": "true"
    "connecthing.io/tenantId": trust1
