apps/trust1/base/requestAuthentication.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: "jwt-authentication"
  namespace: trust1
spec:
  selector:
    matchLabels:
      app: trust1
  jwtRules:
  - issuer: "trust1dc"
    jwksUri: "https://raw.githubusercontent.com/colindavra/backstage-demo-deployment/refs/heads/main/apps/trust1/jwks.json"
