apps/trust1/base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trust1
    app.kubernetes.io/component: trust1
    app.kubernetes.io/instance: trust1
    app.kubernetes.io/name: trust1
    app.kubernetes.io/part-of: trust1-app
    app.openshift.io/runtime-version: latest
  name: trust1
  namespace: trust1
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: trust1
    version: v1
