apps/trust1/base/jwtAuthorizationPolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: trust1
spec:
  targetRef:
    group: ""
    kind: Service
    name: trust1
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["*"]
